# debby

./: .gitignore  Cargo.toml  README.md  deb.sqlite
src/: control.rs  extract.rs  install.rs  main.rs  view.rs
