[package]
name = "debby"
version = "0.1.0"
edition = "2024"

[dependencies]
ar = "0.9.0"
bzip2 = "0.6.1"
clap = { version = "4.5.53", features = ["derive"] }
cli-table = "0.5.0"
clio = { version = "0.3.5", features = ["clap", "clap-parse", "curl"] }
colored = "3.0.0"
directories = "6.0.0"
enum-map = "2.7.3"
env_logger = "0.11.8"
flate2 = "1.1.5"
indicatif = "0.18.3"
log = "0.4.28"
ptree = "0.5.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlite3 = "0.24.0"
sudo = "0.6.0"
tar = "0.4.44"
walkdir = "2.5.0"
xz2 = "0.1.7"
