[package]
name = "debby"
version = "0.1.0"
edition = "2024"

[dependencies]

# for extracting .debs
tar = "0.4.44"
ar = "0.9.0"
flate2 = "1.1.5"
bzip2 = "0.6.1"
xz2 = "0.1.7"
zstd = "0.13.3"

# for args
clap = { version = "4.5.53", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap", "clap-parse", "curl"] }

# for logging
cli-table = "0.5.0"
env_logger = "0.11.8"
log = "0.4.28"
ptree = "0.5.2"
colored = "3.0.0"
indicatif = "0.18.3"

# db management
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlite3 = "0.24.0"

# fs management
directories = "6.0.0"
sudo = "0.6.0"
walkdir = "2.5.0"
